@@ -6,6 +6,9 @@ HISTORY
 
   ++ New features:
 
+  2017-02-17: Simon Goldschmidt
+  * Improved DNS_LOCAL_HOSTLIST interface
+
   2017-02-10: David van Moolenbroek
   * Implement UDP and RAW multicast support for IPv6 (core API, not netconn/sockets)
 
